Refactoring ldapgroupEdit page and correcting some spelling englisch mistakes.

--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -48,7 +48,7 @@
                 <p:tab title="#{msgs.workflows}" id="workflowTab">
                     <ui:include src="/WEB-INF/templates/includes/projects/workflowList.xhtml"/>
                 </p:tab>
-                <p:tab title="#{msgs.docket}" id="docketTab">
+                <p:tab title="#{msgs.dockets}" id="docketTab">
                     <ui:include src="/WEB-INF/templates/includes/projects/docketList.xhtml"/>
                 </p:tab>
                 <p:tab title="#{msgs.regelsaetze}" id="rulesetTab">
