refactored authorization to authority

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -60,10 +60,11 @@
                                                  required="true"/>
                                 </div>
                                 <div>
-                                    <p:outputLabel for="authorizations" value="#{msgs.berechtigungen}"/>
-                                    <p:pickList id="authorizations"
-                                                value="#{BenutzergruppenForm.authorizations}" converter="AuthorizationConverter"
-                                                var="authorization" itemLabel="#{authorization.title}" itemValue="#{authorization}">
+                                    <p:outputLabel for="authorities" value="#{msgs.berechtigungen}"/>
+                                    <p:pickList id="authorities"
+                                                value="#{BenutzergruppenForm.authorities}"
+                                                converter="AuthorizationConverter"
+                                                var="authority" itemLabel="#{authority.title}" itemValue="#{authority}">
                                         <f:facet name="sourceCaption" style="color: #000;">#{msgs.available}</f:facet>
                                         <f:facet name="targetCaption" style="color: #000;">#{msgs.assigned}</f:facet>
                                     </p:pickList>
