--- a/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
@@ -12,68 +12,27 @@
 -->
 
 <ui:composition
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui"
->
-    <f:view locale="#{SpracheForm.locale}">
-        <h:body>
-
-            <h:form id="formularOben">
-                <table width="100%" style="margin-top:3px" align="center"
-                       border="0px">
-
-                    <tr valign="top">
-                        <td colspan="2">
-                            <table width="100%" class="layoutKopf"
-                                   style="#{HelperForm.applicationHeaderBackground}" cellpadding="0"
-                                   cellspacing="0" border="0">
-                                <tr valign="top">
-                                    <td width="20%" height="48">
-                                        <h:commandLink action="#{Metadaten.goMain}" target="_parent">
-                                            <h:graphicImage alt="Kitodo" value="#{HelperForm.applicationLogo}"/>
-                                        </h:commandLink>
-                                    </td>
-                                    <td valign="middle" align="center">
-                                        <h:outputText style="#{HelperForm.applicationTitleStyle}"
-                                                      value="#{Metadaten.process.title}"/>
-                                        <noscript>
-                                            <h:outputText style="color: red;font-weight: bold;"
-                                                          value="#{msgs.keinJavascript}"/>
-                                        </noscript>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-
-                </table>
-            </h:form>
-
-            <h:form id="buttons">
-                <p:blockUI block="tabView" trigger="saveBtn,saveAndBackBtn">
-                    Saving <br/>
-                    <p:graphicImage id="create-mapping-loading" alt="in progress" value="/pages/images/ajax-loader.gif"
-                                    style="max-height: 20px;"/>
-
-                </p:blockUI>
-                <div align="right">
-                    <p:commandButton value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w"
-                                     action="#{Metadaten.validate}"
-                                     update="tabView:metadata"/>
-                    <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle"
-                              icon="ui-icon-close"/>
-                    <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
-                                     icon="ui-icon-disk"
-                                     update="growl"/>
-                    <p:commandButton id="saveAndBackBtn" value="#{msgs.speichernZurueck}"
-                                     action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"
-                                     icon="ui-icon-extlink" update="growl"/>
-                </div>
-            </h:form>
-
-        </h:body>
-    </f:view>
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:p="http://primefaces.org/ui">
+    <p:panel styleClass="content-header">
+        <h3>#{msgs.metadatenBearbeiten}</h3>
+        <h:form id="buttons">
+            <p:blockUI block="tabView" trigger="saveBtn,saveAndBackBtn">
+                Saving <br/>
+                <p:graphicImage id="create-mapping-loading" alt="in progress" value="/pages/images/ajax-loader.gif"/>
+            </p:blockUI>
+            <p:commandButton value="#{msgs.validieren}" icon="fa fa-refresh"
+                             action="#{Metadaten.validate}"
+                             update="tabView:metadata"/>
+            <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle"
+                      icon="fa fa-times"/>
+            <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
+                             icon="fa fa-floppy-o"
+                             update="growl"/>
+            <p:commandButton id="saveAndBackBtn" value="#{msgs.speichernZurueck}"
+                             action="#{Metadaten.saveMetadataToXmlAndGoToProcessPage}"
+                             icon="fa fa-external-link" update="growl"/>
+        </h:form>
+    </p:panel>
 </ui:composition>
