--- a/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataStructureView.xhtml
@@ -12,19 +12,16 @@
 -->
 
 <ui:composition
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui"
->
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:p="http://primefaces.org/ui">
     <h:form id="docStrucForm">
-        <p:commandButton update="docStruc,tabView:structureData" icon="ui-icon-arrowthick-1-n" immediate="true"
+        <p:commandButton update="docStruc,tabView:structureData" icon="fa fa-arrow-up" immediate="true"
                          title="#{msgs.docstructNachObenSchieben}" action="#{Metadaten.nodeUp}"/>
-
-        <p:commandButton update="docStruc,tabView:structureData" icon="ui-icon-arrowthick-1-s" immediate="true"
+        <p:commandButton update="docStruc,tabView:structureData" icon="fa fa-arrow-down" immediate="true"
                          title="#{msgs.docstructNachUntenSchieben}" action="#{Metadaten.nodeDown}"/>
-
         <p:tree value="#{Metadaten.treeNodes}" var="element"
                 selectionMode="single" id="docStruc"
                 selection="#{Metadaten.selectedTreeNode}"
