--- a/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/structureData.xhtml
@@ -11,17 +11,14 @@
   -->
 
 <ui:composition
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui">
     <h:form id="structureData">
-
         <p:messages id="messagesStructureData" closable="true"/>
-
         <h:panelGroup id="structureDataTable" rendered="#{!empty Metadaten.myMetadaten}">
-
             <p:treeTable value="#{Metadaten.treeNodes}" var="item" selectionMode="single"
                          selection="#{Metadaten.selectedTreeNode}">
                 <p:ajax event="select" listener="#{Metadaten.onNodeSelect}"
@@ -29,56 +26,44 @@
                 <f:facet name="header">
                     #{msgs.strukturdaten}
                 </f:facet>
-
-                <p:column headerText="#{msgs.typ}" style="width:20%">
+                <p:column headerText="#{msgs.typ}" style="width:30%; text-align:left">
                     <h:outputText value="#{item.type.getNameByLanguage(SpracheForm.locale)}"/>
                     <!--TODO Buttons should to bee aligned right-->
-                    <p:commandButton icon="ui-icon-pencil"
-                                     style="float: right"
+                    <p:commandButton icon="fa fa-pencil"
                                      update="tabView:dialogEditDocStrucTypeForm:docStructTypeSelection"
                                      title="#{msgs.docstructTypeAendern}"
                                      onclick="PF('dialogEditDocStrucType').show();">
                         <f:setPropertyActionListener value="#{item}" target="#{Metadaten.myStrukturelement}"/>
                     </p:commandButton>
                 </p:column>
-
-                <p:column headerText="#{msgs.haupttitel}">
+                <p:column headerText="#{msgs.haupttitel}" style="width:25%; text-align:left">
                     <h:outputText value="#{Metadaten.getMetadataByElementAndType(item,'TitleDocMain')}"/>
                 </p:column>
+                <p:column headerText="#{msgs.imageNumber}" style="width:20%;text-align:left">
+                    <p:row>
+                        <p:column>
+                            <h:outputText value="#{Metadaten.getImageRangeByElement(item)}"/>
+                        </p:column>
 
-                <p:column headerText="#{msgs.imageNumber}" style="width:20%">
-
-                    <p:panelGrid style="width:100%;margin:0" styleClass="ui-noborder">
-                        <p:row>
-                            <p:column>
-                                <h:outputText value="#{Metadaten.getImageRangeByElement(item)}"/>
-                            </p:column>
-
-                            <p:column style="width:32px;text-align: right">
-                                <p:commandButton icon="ui-icon-pencil"
-                                                 update="tabView:dialogEditPagesForm:paginationSubSelection"
-                                                 title="#{msgs.docstructTypeAendern}"
-                                                 onclick="PF('dialogEditPages').show();">
-                                    <f:setPropertyActionListener value="#{item}" target="#{Metadaten.myStrukturelement}"/>
-                                </p:commandButton>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-
+                        <p:column style="width:32px;">
+                            <p:commandButton icon="fa fa-pencil"
+                                             update="tabView:dialogEditPagesForm:paginationSubSelection"
+                                             title="#{msgs.docstructTypeAendern}"
+                                             onclick="PF('dialogEditPages').show();">
+                                <f:setPropertyActionListener value="#{item}" target="#{Metadaten.myStrukturelement}"/>
+                            </p:commandButton>
+                        </p:column>
+                    </p:row>
                 </p:column>
-
-                <p:column headerText="#{msgs.auswahl}" style="width:64px;text-align: center">
-
+                <p:column headerText="#{msgs.auswahl}" style="width:30%;">
                     <!--TODO set selected type on click-->
-
-                    <p:commandButton icon="ui-icon-plus"
+                    <p:commandButton icon="fa fa-plus"
                                      update="tabView:dialogAddDocStrucTypeForm:docStructAddTypeSelection,tabView:dialogAddDocStrucTypeForm:selectAddableMetadataTypes"
                                      title="#{msgs.strukturelementHinzufuegen}"
                                      onclick="PF('dialogAddDocStrucType').show();">
                         <f:setPropertyActionListener value="#{item}" target="#{Metadaten.myStrukturelement}"/>
                     </p:commandButton>
-
-                    <p:commandButton icon="ui-icon-trash"
+                    <p:commandButton icon="fa fa-trash"
                                      update="tabView:structureData:structureDataTable,tabView:structureData:messagesStructureData,docStrucForm:docStruc"
                                      title="#{msgs.strukturelementLoeschen}" action="#{Metadaten.deleteNode}">
                         <f:setPropertyActionListener value="#{item}" target="#{Metadaten.myStrukturelement}"/>
@@ -87,11 +72,7 @@
             </p:treeTable>
         </h:panelGroup>
     </h:form>
-
     <ui:include src="dialogs/dialogEditDocStrucType.xhtml"/>
-
     <ui:include src="dialogs/dialogAddDocStrucType.xhtml"/>
-
     <ui:include src="dialogs/dialogEditPages.xhtml"/>
-
 </ui:composition>
