--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <!--
  *
  * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
@@ -12,34 +11,31 @@
  *
 -->
 
-<html
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    >
-    <f:view locale="#{SpracheForm.locale}">
-
-        <ui:include src="/pages/inc/head.xhtml" />
-
-        <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="100">
-                <ui:include src="/pages/incMeta/metadataEditorHeader.xhtml" />
-            </p:layoutUnit>
-
-            <p:layoutUnit position="west" resizable="true" size="200" minSize="100" maxSize="600">
-                <ui:include src="/pages/incMeta/metadataStructureView.xhtml" />
-            </p:layoutUnit>
-
-            <p:layoutUnit position="center">
-                <ui:include src="/pages/incMeta/metadataCenter.xhtml" />
-            </p:layoutUnit>
-
-            <p:layoutUnit position="east" size="400" resizable="true" header="#{msgs.metadatenBildAnzeigen}" collapsible="true">
-                <ui:include src="/pages/incMeta/imageContol.xhtml" />
-            </p:layoutUnit>
-
-        </p:layout>
-    </f:view>
-</html>
+<ui:composition
+        template="/WEB-INF/templates/base.xhtml"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:p="http://primefaces.org/ui">
+    <ui:define name="content">
+        <p:panel id="listWrapper">
+            <p:layout fullPage="false" style="height:100%" >
+                <p:layoutUnit position="north" size="100">
+                    <ui:include src="/pages/incMeta/metadataEditorHeader.xhtml" />
+                </p:layoutUnit>
+                <p:layoutUnit position="west" resizable="true" size="200" minSize="100" maxSize="600">
+                    <ui:include src="/pages/incMeta/metadataStructureView.xhtml" />
+                </p:layoutUnit>
+                <p:layoutUnit position="center">
+                    <ui:include src="/pages/incMeta/metadataCenter.xhtml" />
+                </p:layoutUnit>
+                <p:layoutUnit position="east" size="300" resizable="true" header="#{msgs.metadatenBildAnzeigen}" collapsible="true">
+                    <ui:include src="/pages/incMeta/imageContol.xhtml" />
+                </p:layoutUnit>
+            </p:layout>
+        </p:panel>
+    </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+        <li><a href="">#{msgs.metadatenBearbeiten}</a></li>
+    </ui:define>
+</ui:composition>
